# HungryBall

./: .gitignore  CMakeLists.txt  lesson15.sln
Desktop/: Button.cpp  Button.h  CMakeLists.txt  Food.cpp  Food.h  GameScene.cpp  GameScene.h  Hero.cpp  Hero.h  MainScene.cpp  MainScene.h  Message.cpp  Message.h  Objects.cpp  Objects.h  Options.cpp  Options.h  ResourсeManager.h  Scene.h  SceneManager.cpp  SceneManager.h  SettingScene.cpp  SettingScene.h  Thorn.cpp  Thorn.h  lesson15.cpp
Server/: BaseOld.cpp  BaseOld.h  BotsServer.cpp  BotsServer.h  CMakeLists.txt  FeedServer.cpp  FeedServer.h  FoodServer.cpp  FoodServer.h  GameEngine.cpp  GameEngine.h  HeroServer.cpp  HeroServer.h  MessageServer.cpp  MessageServer.h  ObjectsServer.cpp  ObjectsServer.h  PiecesServer.cpp  PiecesServer.h  ThornServer.cpp  ThornServer.h  main.cpp
lesson15/: Base.cpp  Base.h  Button.cpp  Button.h  Food.cpp  Food.h  GameScene.cpp  GameScene.h  Hero.cpp  Hero.h  MainScene.cpp  MainScene.h  Objects.cpp  Objects.h  Options.cpp  Options.h  SaveSettings.txt  Scene.h  SceneManager.cpp  SceneManager.h  SettingScene.cpp  SettingScene.h  Thorn.cpp  Thorn.h  lesson15.cpp  lesson15.vcxproj
